tests/NormalTests/paczka1/fuzzy1/39590725.err
Error in line 4: PpojtpY7 A246 37,2
Error in line 1: AVyf9RUBu A750 29,8
Error in line 13: A246 A246 42,7
Error in line 21: Gouv85zWV A431 28,5
Error in line 22: Gouv85zWV A246 1,6
Error in line 29: GkKYRyG3kS A750 44,7
